# ttcards

./: .gitignore  .gitmodules  .travis.yml  BUGS.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE.md  Makefile  README.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  TODO.md  TODO_config.hpp.patch  Template.cpp  Template.hpp  audio.cpp  audio.h  board.cpp  board.h  card.cpp  card.cpp.1  card.cpp.2  card.h  card.h.1  card.h.2  card_collection.cpp  card_collection.h  card_dealer.cpp  card_dealer.h  card_debug.cpp  card_debug.h  card_deck.cpp  card_deck.h  card_face.cpp  card_face.h  card_hand.cpp  card_hand.h  card_view.cpp  card_view.h  (+21 more)
Resources/: cards.json  config.json  config.json.defaults  config_assets-hi-res.json  config_assets-low-res.json  config_game.json  new_game.json
Resources/Debug/: combo_rule.json  player1_norules.json  player1_same-rule.json  player1_unbeatable.json  player2_norules.json  player2_same-rule.json  player_lose.json  player_win.json  same_rule.json
Resources/Documentation/: developers.md  rules.md  types.md
Resources/Help/: rules.md
Resources/fonts/scale2x/: gameover.fnt  scoreboard.fnt
Resources/gui/: card_info.rml  dataview.rml  debug.rml  messagebox.rml  pause.rml  questionbox.rml  rules_info.rml  ttcards.rcss  window.rml
Resources/gui/scale2x/: card_info.rml  dataview.rml  debug.rml  messagebox.rml  pause.rml  questionbox.rml  rules_info.rml  ttcards.rcss
Resources/images/: backgrounds.json  cursors.json  elements.json  faces.json  menu_elements.json  triad.json
Resources/images/scale2x/: cursors.json  elements.json  faces.json  menu_elements.json  triad.json
cmake/: CPackConfig.cmake  Info.plist.in  macros.cmake  platform.cmake  uninstall.cmake  version.hpp.in
cmake/cpack/: DebGenerator.cmake  OSXGenerator.cmake
cmake/modules/: Findnomlib.cmake
cmake/templates/: Description.txt  Doxyfile.in  Info.plist.in  LICENSE.txt  Welcome.txt  local.hpp.in  uninstall.cmake.in  version.cpp.in  version.hpp.in
data/: cards.txt
docs/: doxygen.cfg  rules.md
extlibs/osx/json_spirit.framework/: json_spirit
extlibs/osx/json_spirit.framework/Headers/: json_spirit_config.h
extlibs/osx/json_spirit.framework/Versions/A/: json_spirit
extlibs/osx/json_spirit.framework/Versions/A/Resources/: Info.plist  LICENSE.md  README.md
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  BoardTile.cpp  BoardTile.hpp  CMakeLists.txt  CPU_Player.cpp  CPU_Player.hpp  Card.cpp  Card.hpp  CardCollection.cpp  CardCollection.hpp  CardDealer.cpp  CardDealer.hpp  CardDebug.cpp  CardDebug.hpp  CardHand.cpp  CardHand.hpp  CardRenderer.cpp  CardRenderer.hpp  CardResourceLoader.cpp  CardResourceLoader.hpp  CardRules.cpp  CardRules.hpp  CardView.cpp  CardView.hpp  CardsMenuState.cpp  CardsMenuState.h  CardsMenuState.hpp  CardsMenuStateCursor.cpp  CardsPageDataSource.cpp  CardsPageDataSource.hpp  ContinueMenuState.cpp  ContinueMenuState.hpp  ContinueMenuStateCursor.cpp  ContinueMenuStateCursor.hpp  Game.cpp  Game.hpp  GameConfig.cpp  (+75 more)
src/states/: CardsMenuState.cpp  CardsMenuState.hpp  CardsMenuStateCursor.cpp  CardsMenuStateCursor.hpp  ConfirmationDialogState.cpp  ConfirmationDialogState.hpp  ContinueMenuState.cpp  ContinueMenuState.hpp  ContinueMenuStateCursor.cpp  ContinueMenuStateCursor.hpp  DialogCursor.cpp  DialogCursor.hpp  GameOverState.cpp  GameOverState.hpp  GameOverStateCursor.cpp  GameOverStateCursor.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.hpp
ttcards/: BUGS.md  CMakeLists.txt  TODO.md  ttcards.sublime-project
ttcards/Resources/: ttcards.icns
ttcards/data/: Info.plist  cards.txt
ttcards/docs/: doxygen.cfg  header.html  mainpage.hpp  rules.md  types.md
ttcards/src/: App.hpp  CardsMenuState.cpp  CardsMenuState.h  Game.cpp  Game.hpp  GameOverState.cpp  GameOverState.h  Game_debug.cpp  TTcards_debug.cpp  board.cpp  board.h  card.cpp  card.h  card_collection.cpp  card_collection.h  card_debug.cpp  card_debug.h  card_hand.cpp  card_hand.h  card_rules.cpp  card_rules.h  card_view.cpp  card_view.h  cfg.cpp  cfg.h  cpu_player.h  main.cpp  player.cpp  player.h  ttcards.cpp  ttcards.h
